k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hike-hawaii-deployment
  labels:
    app: hike-hawaii
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hike-hawaii
  template:
    metadata:
      labels:
        app: hike-hawaii
    spec:
      containers:
        - name: hike-hawaii
          image: public.ecr.aws/o9r8h0v8/public-ecr-repo:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3010
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 3010
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
