k8s/service-externalName.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-service
spec:
  type: ExternalName
  externalName: ec2-3-80-29-2.compute-1.amazonaws.com
