k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /hike-hawaii
            pathType: Prefix
            backend:
              service:
                name: hike-hawaii-service-nodeport
                port:
                  number: 80
